Modified vlt filter, fixed clientlibs for widgets, added wrapping clientlib to embed all widgets, added mising lined-blockquote icon

--- a/source/ui/src/main/content/jcr_root/apps/aemtoolbox/widgets/RTEBlockquotePlugin/source/css/RTEBlockquote.css
+++ b/source/ui/src/main/content/jcr_root/apps/aemtoolbox/widgets/RTEBlockquotePlugin/source/css/RTEBlockquote.css
@@ -1,8 +1,8 @@
 #CQ .x-html-editor-tb .x-edit-blockquote{
-	background-image: url(/images/icons/blockquote.png);
+	background-image: url(/etc/designs/aemtoolbox/images/icons/blockquote.png);
 	background-position: 1px 2px;
 }
 #CQ .x-html-editor-tb .x-edit-linedblockquote{
-    background-image: url(/images/icons/lined-blockquote.png);
+    background-image: url(/etc/designs/aemtoolbox/images/icons/lined-blockquote.png);
     background-position: 1px 2px;
 }
